Update: fixes broken css, adds to gitignore

--- a/src/sass/components/_nav.scss
+++ b/src/sass/components/_nav.scss
@@ -1,5 +1,6 @@
 .primary {
     display: none;
+    padding: 0 5%;
     @include media($bp-large) {
         display: inline;
         float: right;
@@ -7,6 +8,10 @@
             margin-right: 1.25rem;
         }
     }
+}
+
+.logo {
+    padding-left: 4.5%;
 }
 
 .mobile {
